@@ -1,3 +1,8 @@
+2013-01-09 Riccardo Mottola <rm@gnu.org>
+
+	* AppController.m
+	Separate rotation method from actions.
+
 2013-01-08 Riccardo Mottola <rm@gnu.org>
 
 	* AppController.m
